--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            <div class="navbar">
             <ul>
                 <li>
-                    <a href="https://KingofKFCJamal.github.io/CaseClicker" class="headerLogo"></a>
+                    <a href="#" class="headerLogo"></a>
                 </li>
                 <div class="settings"></div>
                 <div class="about">About</div>
@@ -245,7 +245,7 @@
                     <div class="tab" id="caseTab">Case</div>
                     <div class="tab" id="jackpotTab">Jackpot</div>
                     <div class="tab" id="coinTab">Coin Flip</div>
-                    <div class="tab" id="newsTab">News</div>
+                    
                 </div>
                 <div class="rightMain">
                     <div class="inventoryContainer">
